# her

./: ._scripts  .env.example  .gitignore  BUILD.md  README.md  RELEASE.md  app.js  guide.html  package-lock.json  package.json  server.js  用户指南.md
.github/workflows/: build.yml
agent/: her-agent.js
lib/: ai-client.js  auth.js  data.js  edit-diff.js  embedded-html.js  memory.js  prompt.js  scheduler.js  settings.js  skills.js  summary-dag.js  tools.js  utils.js  weixin.js
lib/weixin-sdk/: index.d.mts  index.mjs
public/: guide.html  index.html
public/downloads/: mac-setup.sh
scripts/: deploy.sh  healthcheck.sh  patch_html.py  prestart.sh  windows-setup.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
